tests/snapshots/cog__cog_requires_a_mode.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <--write|--check>

Usage: aigarden cog <--write|--check>

For more information, try '--help'.
