tests/snapshots/cog__cog_runs_only_where_cog_fresh_is_enabled.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--check"
---
success: false
exit_code: 1
----- stdout -----
error[cog-fresh]: cog block `sh` is out of date — run `aigarden cog --write`
 --> doc.md:3:1
  |
3 | <!-- aigarden:cog sh "echo hello" -->
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
aigarden: 1 finding

----- stderr -----
