tests/snapshots/cog__cog_with_cog_fresh_ignored_repo_wide_is_a_tool_error.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--check"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: no files for `aigarden cog`: `cog-fresh` is enabled on no markdown file (check `ignore` and `[per-file-ignores]`)
