tests/snapshots/cog__cog_write_file_contents.snap
---
source: tests/cog.rs
expression: written
---
# Doc

<!-- aigarden:cog sh "echo hello" -->
hello
<!-- aigarden:end -->
