tests/snapshots/cog__cog_write_regenerates_then_check_is_clean-2.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--check"
---
success: true
exit_code: 0
----- stdout -----
✓ aigarden: checked 1 file, no findings

----- stderr -----
